--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -17,7 +17,7 @@
 				<td><%= s.artist %></td>
 				<td><a href="/songs/<%= s.id %>"><%= s.title %></a></td>
 				<td><%= s.adds.count %></td>
-				<td><a href="/adds/<%= s.id %>"> Add</a> </td>
+				<td><a href="/adds/<%= s.id %>"><button> Add</button></a> </td>
 			</tr>
 		<% end %>
 	</tbody>
